[package]
name = "cheerz-dl"
version = "0.1.0"
authors = ["Farzad FARID <farzy@farzy.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10.7", features = ["blocking"] }
log = "0.4"
env_logger = "0.7"
