[package]
name = "cheerz-dl"
version = "0.1.0"
authors = ["Farzad FARID <farzy@farzy.org>", "Gilles RASIGADE"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10.7", features = ["blocking"] }
log = "0.4"
env_logger = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = "~2.33.3"
